k8s/clusters/internal-dev-gke/canaries/canary-release/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-release
  labels:
    istio-injection: enabled
